src/css/style.css
.margin-top-10 {
	margin-top: 10rem;
}

.margin-top-5 {
	margin-top: 5rem;
}

.button-small {
	font-size: .8rem;
	height: 2.8rem;
	line-height: 2.8rem;
	padding: 0 1.5rem;
}

.text-center {
	text-align: center;
}


.flex-center {
	display: flex;
	justify-content: center;
	align-items: center;
}

.disabled {
	display: none;
}

.invisible {
	visibility: hidden;
}

.navigation .title {
	display: inline;
	font-size: 1.6rem;
	line-height: 5.2rem;
	padding: 0;
	text-decoration: none;
	cursor: pointer;
}

.navigation {
	border-bottom: .1rem solid #d1d1d1;
}

.navigation .splitter {
	color: #505a65;
	position: relative;
	top: -0.15rem;
	right: -0.2rem;
}

.navigation .current {
	color: #505a65;
}

.description {
	display: block;
	margin-bottom: 0.8rem;
}

.entry-column {
	min-width: 20rem;
}

/* Override input text color to make it readable in dark-mode browsers. */
input[type="color"], input[type="date"], input[type="datetime"],
input[type="datetime-local"], input[type="email"], input[type="month"],
input[type="number"], input[type="password"], input[type="search"],
input[type="tel"], input[type="text"], input[type="url"], input[type="week"],
input:not([type]), textarea, select {
	color: #505a65;
}

